Fix table title cutoff

--- a/reporting.cse135vrc.site/public_html/styles.css
+++ b/reporting.cse135vrc.site/public_html/styles.css
@@ -461,3 +461,8 @@
     page-break-before: avoid;
     break-before: avoid;
 }
+
+.exporting .export-keep-together {
+    page-break-inside: avoid;
+    break-inside: avoid;
+}
